# gitlab_chatbot

./: .gitignore  Dockerfile.backend  Dockerfile.streamlit  Justfile  README.md  docker-compose.yml  pyproject.toml  run_worker.py
.devcontainer/: devcontainer.json
config/: gitlab.json  init.sql  tsvector.sql
gitlab_chatbot/: __main__.py  settings.py
gitlab_chatbot/db/: __init__.py  crud_helper.py
gitlab_chatbot/migrations/: env.py
gitlab_chatbot/migrations/versions/: 0771392926f5_add_chat_tables.py  ba07ee6e326e_add_relavant_tables.py  c0a7655b9ff1_add_injection_tables.py
gitlab_chatbot/models/: chat.py  document_db.py
gitlab_chatbot/routes/chatbot/: route.py  schemas.py
gitlab_chatbot/utils/: hybrid_search.py
gitlab_chatbot/workers/: embed.py  files_fetcher.py  files_processor.py  gitlab_utils.py  schema.py  worker.py
scripts/: entrypoint.sh  streamlit.sh
streamlit/: README_streamlit.md  config.py  debug_search.py  requirements.txt  streamlit_app.py  test_streamlit_integration.py
tests/: search_test.py
workers/: fetch_latest_docs.py
