[project]
name = "joveo"
version = "0.1.0"
description = "GitLab Handbook Chatbot - A RAG-powered assistant for GitLab documentation"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pgvector (>=0.4.1,<0.5.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "streamlit (>=1.28.0,<2.0.0)",
    "openai (>=1.3.0,<2.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "markdown (>=3.5.0,<4.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "tiktoken (>=0.5.0,<1.0.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "plotly (>=5.17.0,<6.0.0)",
    "streamlit-option-menu (>=0.3.0,<1.0.0)",
    "streamlit-chat (>=0.1.0,<1.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
