[project]
name = "gitlab_chatbot"
version = "0.1.0"
description = "GitLab Handbook Chatbot - A RAG-powered assistant for GitLab documentation"
authors = [
    {name = "Navdeep K",email = "navdeep152002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pgvector (>=0.4.1,<0.5.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "streamlit (>=1.28.0,<2.0.0)",
    "openai (>=1.3.0,<2.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "markdown (>=3.5.0,<4.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "tiktoken (>=0.5.0,<1.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "plotly (>=5.17.0,<6.0.0)",
    "streamlit-option-menu (>=0.3.0,<1.0.0)",
    "streamlit-chat (>=0.1.0,<1.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "torch (>=2.7.1,<3.0.0)",
    "langchain-google-genai (>=2.1.6,<3.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "gevent (>=25.5.1,<26.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "langchain-core (>=0.3.68,<0.4.0)",
    "sseclient (>=0.0.27,<0.0.28)",
    "guardrails-ai (>=0.6.6,<0.7.0)"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gitlab_chatbot*"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
